# hallway-dashboard

./: README.md  template.yml
.github/workflows/: build.yml  deploy.yml  post-merge.yml  pre-merge.yml  test.yml
hallway-dashboard-be/: .gitignore  Cargo.toml  run_local.sh
hallway-dashboard-be/files/: public_transport.json  weather.json  weather_bad_structure.json
hallway-dashboard-be/src/: main.rs  public_transport.rs  weather.rs
hallway-dashboard-fe/: .gitignore  package.json
hallway-dashboard-fe/cypress/fixtures/: public-transport.json  weather.json
hallway-dashboard-fe/cypress/integration/: basic.js
hallway-dashboard-fe/src/: Dashboard.js  Dashboard.module.css  axios.js  index.css  index.js
hallway-dashboard-fe/src/component/PublicTransport/: Departure.jsx  Departure.module.css  DepartureTable.jsx  DepartureTable.module.css
hallway-dashboard-fe/src/component/TofuClock/: TofuClock.jsx  TofuClock.module.css
hallway-dashboard-fe/src/component/TofuImage/: TofuImage.jsx  TofuImage.module.css
hallway-dashboard-fe/src/component/Weather/: PrecipitationIcon.jsx  WeatherBar.jsx  WeatherBar.module.css  WeatherForecast.jsx  WeatherForecast.module.css  WeatherIcon.jsx  WindIcon.jsx
hallway-dashboard-fe/src/container/Clock/: ClockContainer.jsx
hallway-dashboard-fe/src/container/PublicTransport/: PublicTransportContainer.jsx
hallway-dashboard-fe/src/container/Weather/: WeatherContainer.jsx
hallway-dashboard-fe/src/store/actionCreators/: actionTypes.js  publicTransport.js  publicTransport.test.js  weather.js  weather.test.js
hallway-dashboard-fe/src/store/reducers/: publicTransport.js  (+3 more)
hallway-dashboard-fe/src/util/: common.proptypes.js  s3.js
