[package]
name = "hallway-dashboard-be"
version = "0.1.0"
authors = ["Rickard Andersson <dunklas@gmail.com>"]
autobins = false
edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.2.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
log = "0.4.8"
simple_logger = "1.6.0"