[package]
name = "hallway-dashboard-be"
version = "0.1.0"
authors = ["Rickard Andersson <dunklas@gmail.com>"]
autobins = false
edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
simple_logger = "1.6.0"
chrono = { version = "0.4", features = ["serde"] }
ureq = "0.12.1"
rusoto_core = {version = "0.43.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.43.0", default_features = false, features=["rustls"]}
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
mockito = "0.25.1"
float-cmp = "0.6.0"